Release 0.014:

Release 0.013:
	* Added @list, an alias for @list_rooms.
	* Added @make_detail command.
	* Made details load and save properly.
	* Fixed an ObjectD bug with objects that just added an
	  "upgraded" function.
	* Made @delete work with details.
	* Cut down some now-needless stuff in the helpfiles, added
	  help for some undocumented commands.
	* The help system now treats space, minus and underscore as
	  equivalent.  That'll save us some more help entries and
	  generate more useful responses.
	* @stat now uses the new object binding functions.
	* Objects now inherit details from their parent.
	* @stat now reports on immediate vs inherited details.
	* Objects now have a removed_details array so they can specifically
	  remove parental details they don't like without affecting the
	  parent.
	* You can now remove details with @set_obj_detail.
	* Basic data inheritance of details works and is tested.
	* Removed gossip channel and gossip command.  Updated help.
	* Removed all "nodesc" functionality.  Replaced by details.
	* Merged MOBILE_PORTABLE into SIMPLE_PORTABLE
	* Merged SIMPLE_PORTABLE into SIMPLE_ROOM
	* Made mobiles able to accept an optional name field as a comment
	* New prototype parser (thanks to Keith Dunwoody)
	* Serious rework of EXIT code, including locked and lockable
	  objects, ability to look at doors, one- and two-way exits.

Release 0.012:
	* More logging and stuff in ObjectD.  And fixed a bug that
	  caused log messages on rebuild.
	* Now the upgraded() function for upgraded objects is called
	  with a call_out, so it executes the new code instead of the
	  old code.  The compiling() function still executes the
	  pre-recompile code.
	* New online help for old Kernel MUDLib commands.  I believe
	  all the Kernel MUDLib legacy commands are now documented.
	* Merged help with @help.  Now the regular help command handles
	  all of it just fine.
	* Slightly different logfile output format.